--- a/package.json
+++ b/package.json
@@ -4,7 +4,7 @@
   "description": "AngularJS service(s) for browser detection. Digest friendly.",
   "author": {
     "name": "EF CTX",
-    "url":  "http://ef.com"
+    "url": "http://ef.com"
   },
   "licenses": [
     {
@@ -31,6 +31,7 @@
     "glob": "~4.0.6",
     "group-grunt-tasks": "~0.1.3",
     "grunt": "~0.4.1",
+    "grunt-browser-sync": "^2.0.0",
     "grunt-bump": "~0.0.11",
     "grunt-contrib-clean": "~0.5.0",
     "grunt-contrib-concat": "~0.5.0",
@@ -50,6 +51,7 @@
     "grunt-jsglue": "~0.1.0",
     "grunt-karma": "~0.9.0",
     "grunt-ngdocs": "git://github.com/cork-labs/grunt-ngdocs.git",
+    "grunt-openport": "^0.1.0",
     "grunt-shell": "~0.6.4",
     "grunt-template": "~0.2.3",
     "karma": "~0.12.0",
